json_tests/tests/ui/unexpected_colon.stderr
error: no rules expected the token `:`
 --> $DIR/unexpected_colon.rs:5:13
  |
5 |     json!({ : true });
  |             ^

